# wagtailcloudinary

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
sandbox/: settings.py  urls.py  wsgi.py
sandbox/foo/: models.py  snippets.py
sandbox/foo/migrations/: 0001_initial.py  0002_auto_20190125_2027.py  0003_auto_20230201_2344.py
sandbox/foo/templates/foo/: foo_page.html
sandbox/foo/tests/: test_fixtures.json  tests.py
src/wagtailcloudinary/: api.py  apps.py  blocks.py  fields.py  wagtail_hooks.py  widgets.py
src/wagtailcloudinary/management/commands/: import_cloudinary_images.py
src/wagtailcloudinary/migrations/: 0001_initial.py
src/wagtailcloudinary/static/wagtailcloudinary/js/: cloudinary-chooser.js
src/wagtailcloudinary/templates/wagtailcloudinary/chooser/: chooser.html  results.html
src/wagtailcloudinary/templates/wagtailcloudinary/include/: pagination_nav.html
src/wagtailcloudinary/views/: chooser.py
wagtailcloudinary/: admin.py  api.py  blocks.py  fields.py  models.py  sites.py  utils.py  wagtail_hooks.py  widgets.py
wagtailcloudinary/management/commands/: import_cloudinary_images.py
wagtailcloudinary/migrations/: 0001_initial.py
wagtailcloudinary/static/wagtailcloudinary/css/: main.css
wagtailcloudinary/static/wagtailcloudinary/js/: cloudinary-chooser-telepath.js  cloudinary-field.js
wagtailcloudinary/templates/wagtailcloudinary/include/: pagination_nav.html
wagtailcloudinary/templates/wagtailcloudinary/widgets/: cloudinary_chooser.html
wagtailcloudinary/templatetags/: wagtailcloudinary.py
wagtailcloudinary/views/: chooser.py
