[build-system]
requires = [ "poetry-core>=2.1.2",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wagtailcloudinary"
version = "2.2.2"
description = "Cloudinary support for Wagtail CMS"
authors = ["thelab <thelabdev@thelab.co>"]
readme = "README.md"
homepage = "https://gitlab.com/thelabnyc/wagtailcloudinary"
repository = "https://gitlab.com/thelabnyc/wagtailcloudinary"
license = "ISC"

[[tool.poetry.packages]]
include = "wagtailcloudinary"
from = "src"

[tool.poetry.dependencies]
python = "^3.11"
cloudinary = "~1.44.0"
python-dateutil = ">=2.9.0.post0"
wagtail = ">=6.3"

[tool.poetry.group.dev.dependencies]
flake8 = "==7.2.0"
tox = "==4.26.0"
ipdb = "0.13.13"

[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "poetry"
version_scheme = "pep440"
version_files = [
    "pyproject.toml:version",
]
pre_bump_hooks = [
    "pre-commit run --all-files || true",
]
post_bump_hooks = [
    "git push origin master $CZ_POST_CURRENT_TAG_VERSION"
]
